Fix center align issue for download print text and shorten hr for mobile devices

--- a/css/2020_style/style.css
+++ b/css/2020_style/style.css
@@ -1426,7 +1426,9 @@ a:hover {
 }
 
 .download-print-text {
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     font-size: 1.2em;
 }
 
@@ -1560,6 +1562,9 @@ a:hover {
   }    
   body {
       padding-bottom: 150px;
+  }
+  hr {
+    width: 70%;
   }
   .description-section {
     padding: 0px;
